--- a/FXExperienceControls/src/main/resources/styles/font_picker.css
+++ b/FXExperienceControls/src/main/resources/styles/font_picker.css
@@ -7,9 +7,9 @@
     -fe-color: #2c2f33;
     -fe-body-color: #23272a;
 
-    -fe-shadow-highlight-color: #343434;
+    -fe-shadow-highlight-color: #282828;
     -fe-outer-border: #343434;
-    -fe-inner-border: #343434;
+    -fe-inner-border: #464646;
 
     -fe-control-inner-background: #23272a;
     -font-family: 'Roboto';
@@ -31,13 +31,11 @@
 .sample-text {
     -fx-fill: -text-secondary;
 }
+.prop-label {
+    -fx-text-fill: -text-secondary;
+}
 .font-picker-pane {
     -fx-background-color: -fe-body-background;
-}
-
-.size-combo-box .list-view,
-.family-combo-box .list-view {
-    -fx-background-color: -fe-outer-border, -fe-control-inner-background;
 }
 
 .font-radio-button {
@@ -50,13 +48,6 @@
     -fx-background-color: -fe-focus-color, -fe-inner-border, -fe-body-color, -fx-faint-focus-color, -fe-body-color;
 
 }
-.family-combo-box,
-.family-combo-box .combo-box-base,
-.size-combo-box:editable > .arrow-button {
-    -fx-background-color: -fe-shadow-highlight-color, -fe-inner-border, -fe-inner-border, -fe-body-color;
-
-}
-
 .style-choice-box .context-menu {
     -fx-text-fill: -text-secondary;
     -fx-background-color: -fe-inner-background;
@@ -67,21 +58,41 @@
     -fx-text-fill: -text-secondary;
     -fx-font-size: 1em;
 }
-.style-choice-box {
-    -fx-background-color: -fe-inner-background;
-    -fx-border-color: -fe-border;
-    -fx-border-radius: 3;
-    -fx-background-radius: 3;
+.style-choice-box,
+.style-choice-box:focused {
+    -fx-background-color: -fe-shadow-highlight-color, -fe-control-inner-background, -fe-border, -fe-body-color;
     -fx-font-size:  0.93333em;
+    -fx-background-insets: 0 0 -1 0, 0, 1, 2;
+    -fx-background-radius: 3px, 3px, 2px, 1px;
+    -fx-padding: 0.333333em 0.666667em 0.333333em 0.666667em; /* 4 8 4 8 */
 }
 
+/*Drop down list*/
+.family-combo-box .list-view {
+    -fx-background-color: -fe-border, -fe-control-inner-background;
+}
 .family-combo-box .list-cell .text {
     -fx-font-size: 0.8666em;
     -fx-fill: -fe-body-text;
 }
 .family-combo-box .combo-box-popup .list-view .list-cell {
-    -fx-background-color: -fe-inner-background;
-    -fx-text-fill: -text-secondary;
+     -fx-background-color: -fe-inner-background;
+     -fx-text-fill: -text-secondary;
+ }
+.family-combo-box,
+.family-combo-box .combo-box-base {
+    -fx-background-color: -fe-shadow-highlight-color,
+    -fe-control-inner-background, -fe-border,  -fe-control-inner-background;
+}
+/*Make focus mirror size and color scheme as default*/
+.family-combo-box:focused,
+.family-combo-box .combo-box-base:focused {
+    -fx-background-color: -fe-shadow-highlight-color,
+    -fe-control-inner-background, -fe-border,  -fe-control-inner-background;
+    -fx-background-insets: 0 0 -1 0, 0, 1, 2;
+    -fx-background-radius: 3px, 3px, 2px, 1px;
+    -fx-padding: 0.333333em 0.666667em 0.333333em 0.666667em; /* 4 8 4 8 */
+
 }
 
 /*******************************************************************************
@@ -93,47 +104,29 @@
  * TextBox are specified here.                                                 *
  *                                                                             *
  ******************************************************************************/
+/* Drop down list background and border */
+.size-combo-box .list-view {
+    -fx-background-color: -fe-border, -fe-control-inner-background;
+}
+.size-combo-box .combo-box-popup .list-view .list-cell {
+    -fx-background-color: -fe-inner-background;
+    -fx-text-fill: -text-secondary;
+}
+/*Remove the border around arrow button*/
+.size-combo-box:editable > .arrow-button,
 .size-combo-box:editable > .arrow-button:focused {
-    -fx-background-color: -fe-shadow-highlight-color, -fe-inner-border, -fe-inner-border, -fe-body-color;
+    -fx-background-color: -fe-control-inner-background, -fe-control-inner-background;
+}
 
-}
-.size-combo-box:editable > .arrow-button {
--fx-background-color: -fe-outer-border, -fe-inner-border, -fe-body-color;
--fx-background-insets: 1 1 1 0, 1, 2;
--fx-background-radius: 0 3 3 0, 0 2 2 0, 0 1 1 0;
-}
 .size-combo-box:editable > .text-field {
-    -fx-background-color:
-            linear-gradient(to bottom, -fe-text-box-border, -fe-text-box-border),
-            linear-gradient(from 0px 0px to 0px 5px, derive(-fe-control-inner-background, -25%), -fe-control-inner-background);
+    -fx-background-color: -fe-control-inner-background;
     -fx-text-fill: -fe-inner-text;
-    -fx-background-insets: 1 0 1 1;
-    -fx-background-radius: 2 0 0 2;
-}
-/*.size-combo-box:editable:focused {*/
-/*-fx-background-color: -fe-focus-color;*/
-/*-fx-background-insets: -0.2;*/
-/*-fx-background-radius: 3;*/
-/*}*/
-.size-combo-box:editable:focused > .text-field,
-.size-combo-box:editable > .text-field:focused{
-    -fx-background-color:
-            -fe-control-inner-background,
-            -fe-outer-border,
-            linear-gradient(from 0px 0px to 0px 5px, derive(-fe-control-inner-background, -20%), -fe-control-inner-background);
-    -fx-background-insets: 1 0 1 1, 1 0 1 1, 3 2 3 3;
-    -fx-background-radius: 2 0 0 2, 1 0 0 1, 0;
 }
 
-.size-combo-box .combo-box-base:editable:focused > .arrow-button {
-    -fx-background-color: -fe-inner-border, -fe-body-color, -fe-text-box-border, -fe-body-color;
-    -fx-background-insets: 1, 2, 1, 2.6;
-    -fx-background-radius: 0 2 2 0, 0 1 1 0, 0 1 1 0, 0 1 1 0;
-}
-.size-combo-box:editable {
-    -fx-background-color: -fe-shadow-highlight-color, -fe-inner-border, -fe-inner-border, -fe-body-color;
+.size-combo-box:editable, .size-combo-box:editable:focused {
+    -fx-background-color: -fe-shadow-highlight-color, -fe-border, -fe-control-inner-background, -fe-border;
 }
 .size-combo-box:editable .text-field {
-    -fx-highlight-fill: indigo;
+    /*-fx-highlight-fill: deepskyblue;*/
     -fx-highlight-text-fill: -text-primary;
 }
