--- a/FXExperienceTools/src/main/resources/fxml/FXMLGradientPanel.fxml
+++ b/FXExperienceTools/src/main/resources/fxml/FXMLGradientPanel.fxml
@@ -1,22 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Rectangle?>
-<fx:root dividerPositions="0.5" prefHeight="500.0" prefWidth="900.0" styleClass="split-pane-main" stylesheets="@../styles/gradient_panel.css" type="SplitPane" xmlns="http://javafx.com/javafx/8.0.131" xmlns:fx="http://javafx.com/fxml/1">
+
+<fx:root prefHeight="500.0" prefWidth="800.0" styleClass="split-pane-main" stylesheets="@../styles/gradient_panel.css" type="SplitPane" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
    <items>
       <AnchorPane maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: transparent;">
          <children>
-            <GridPane alignment="CENTER" maxWidth="1.7976931348623157E308" styleClass="main-grid" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <GridPane fx:id="gridPane" alignment="CENTER" maxWidth="1.7976931348623157E308" styleClass="main-grid" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <columnConstraints>
-                  <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="170.0" />
-                  <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="170.0" />
-                  <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="170.0" />
-                  <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="170.0" />
+                  <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="225.0" />
+                  <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="140.0" />
+                  <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="140.0" />
+                  <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="225.0" />
                   <ColumnConstraints />
                   <ColumnConstraints />
                </columnConstraints>
@@ -37,7 +45,7 @@
                   <Insets left="5.0" right="5.0" />
                </padding>
                <children>
-                  <HBox alignment="CENTER" spacing="20.0" GridPane.columnSpan="6" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.rowSpan="4" GridPane.vgrow="ALWAYS">
+                  <HBox alignment="CENTER" spacing="20.0" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.rowSpan="4" GridPane.vgrow="ALWAYS">
                      <children>
                         <Rectangle fx:id="gradientSquare" arcHeight="20.0" arcWidth="20.0" fill="DODGERBLUE" height="80.0" stroke="TRANSPARENT" strokeType="INSIDE" styleClass="gradient-shape" width="100.0" HBox.hgrow="ALWAYS" />
                         <Button fx:id="fxButton" contentDisplay="BOTTOM" mnemonicParsing="false" prefHeight="200.0" prefWidth="160.0" styleClass="gradient-object" text="fx experience" HBox.hgrow="ALWAYS">
@@ -57,7 +65,7 @@
                         <Insets left="5.0" right="5.0" />
                      </GridPane.margin>
                   </TextArea>
-                  <Label text="Gradient CSS:" GridPane.columnSpan="2" GridPane.rowIndex="6">
+                  <Label text="Gradient CSS:" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="6">
                      <padding>
                         <Insets left="10.0" />
                      </padding>
@@ -66,23 +74,6 @@
                      </GridPane.margin>
                   </Label>
                </children>
-            </GridPane>
-         </children>
-      </AnchorPane>
-      <AnchorPane maxWidth="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="245.0" style="-fx-background-color: transparent;;">
-         <children>
-            <GridPane fx:id="gridPane" prefHeight="522.0" prefWidth="220.0" styleClass="main-grid" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="ALWAYS" maxWidth="-Infinity" minWidth="10.0" prefWidth="10.0" />
-                  <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="ALWAYS" maxWidth="-Infinity" minWidth="10.0" prefWidth="10.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="10.0" vgrow="ALWAYS" />
-                  <RowConstraints minHeight="-Infinity" prefHeight="40.0" valignment="TOP" vgrow="ALWAYS" />
-                <RowConstraints maxHeight="1.7976931348623157E308" vgrow="ALWAYS" />
-                <RowConstraints maxHeight="1.7976931348623157E308" vgrow="ALWAYS" />
-              </rowConstraints>
             </GridPane>
          </children>
       </AnchorPane>
